<resources>
    <string name="app_name">Baking App</string>
    <string name="recipe_URL">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="default_text">Dummy Text</string>
    <string name="quantity">Quantity:</string>
    <string name="measure">Measure:</string>
    <string name="ingredient">Ingredient:</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_list">Ingredients List:</string>
    <string name="add_to_widget">Add to Widget</string>
    <string name="no_items_is_selected">No Items Is Selected</string>
    <string name="position">1</string>
</resources>
