<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/recipeStepCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ingredientNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/ingredientQuantityHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientNumberTextView"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/ingredientNumberTextView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/ingredientQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientQuantityHeadline"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/default_text"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/ingredientQuantityHeadline"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/ingredientMeasureHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientQuantity"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/measure"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/ingredientQuantity"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/ingredientMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientMeasureHeadline"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/default_text"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/ingredientMeasureHeadline"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/ingredientHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientMeasure"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ingredient"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/ingredientMeasure"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientHeadline"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/default_text"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/ingredientHeadline"
                tools:layout_editor_absoluteX="16dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>